[package]
name = "km"
version = "0.1.0"
authors = ["Sigkill79 <sigurd@kitemaker.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.21"
reqwest = { version = "^0.11.3", features = ["json", "blocking"] }
graphql_client = "0.9.0"
serde = "^1.0"
tokio = { version = "1", features = ["full"] }