[package]
name = "km"
version = "0.1.0"
authors = ["Sigkill79 <sigurd@kitemaker.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.21"
reqwest = { version = "^0.12.4", features = ["json", "blocking"] }
graphql_client = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
colors-transform = "0.2.11"
termimad = "0.29.2"
